ACE-3380: Added text-overflow handling to dialog title to ensure that we can always access the close button on the dialog
git-svn-id: http://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@89610 7033f55c-6c29-4ad8-afba-765cb616e738

--- a/root/projects/slingshot/source/web/js/alfresco/dialogs/css/AlfDialog.css
+++ b/root/projects/slingshot/source/web/js/alfresco/dialogs/css/AlfDialog.css
@@ -62,6 +62,11 @@
    line-height: 1.5em;
    padding: 0.25em;
    color: @general-font-color;
+   overflow: hidden;
+   text-overflow: ellipsis;
+   white-space: nowrap;
+   display: inline-block;
+   max-width: 500px;
 }
 
 .alfresco-dialog-AlfDialog .footer {
